tests/golden/type_errors/anonymous_struct_literal.err
Type error at 1:11: undefined variable `name`
  let p = { name: "Ada" };
            ^
